--- a/index.html
+++ b/index.html
@@ -1,237 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Live Quiz Platform</title>
-<style>
-*{box-sizing:border-box;font-family:Segoe UI,sans-serif}
-body{margin:0;min-height:100vh;display:flex;align-items:center;justify-content:center;background:linear-gradient(135deg,#6a11cb,#2575fc);color:#fff}
-.screen{display:none;animation:fade .4s}
-.active{display:flex}
-@keyframes fade{from{opacity:0;transform:scale(.96)}to{opacity:1;transform:scale(1)}}
-
-.quiz-layout{width:100%;max-width:520px;height:92vh;display:flex;flex-direction:column}
-.top{flex:1;background:#fff;color:#333;padding:18px;border-radius:18px 18px 0 0}
-.bottom{flex:1;background:#f4f6fb;color:#333;padding:14px;border-radius:0 0 18px 18px;overflow:auto}
-
-.center{background:#fff;color:#333;padding:28px;border-radius:18px;box-shadow:0 20px 40px rgba(0,0,0,.3);width:420px}
-input,button{width:100%;padding:14px;font-size:16px;border-radius:12px}
-button{border:none;background:#2575fc;color:#fff;cursor:pointer;margin-top:12px}
-.error{color:red;font-size:14px;height:18px}
-
-.qtimer{font-weight:700;color:#2575fc;margin-bottom:6px}
-.question{font-size:22px;font-weight:700;margin-bottom:14px}
-.options{display:grid;gap:12px}
-.option{display:flex;align-items:center;gap:14px;padding:14px;border-radius:14px;border:2px solid #ddd;cursor:pointer;background:#fafafa;transition:.25s}
-.option:hover{border-color:#2575fc;background:#eef3ff}
-.option.correct{border-color:#2ecc71;background:#eafff3}
-.option.wrong{border-color:#ff4757;background:#ffecec}
-.circle{width:22px;height:22px;border-radius:50%;border:3px solid #2575fc;position:relative}
-.option.correct .circle::after{content:"";width:12px;height:12px;background:#2ecc71;border-radius:50%;position:absolute;top:50%;left:50%;transform:translate(-50%,-50%)}
-
-.player{display:flex;align-items:center;justify-content:space-between;padding:10px;border-radius:12px;background:#fff;margin-bottom:8px;font-size:14px}
-.player img{width:34px;height:34px;border-radius:50%;margin-right:8px}
-.player-left{display:flex;align-items:center;gap:8px}
-.top1{background:linear-gradient(135deg,#2ecc71,#1abc9c);color:#fff;font-weight:800}
-
-.result{flex-direction:column;text-align:center}
-.trophy{font-size:64px;margin-bottom:10px}
-
-.confetti{position:fixed;width:8px;height:14px;top:-20px;animation:fall 2.8s linear forwards}
-@keyframes fall{to{transform:translateY(110vh) rotate(360deg);opacity:0}}
-
-@media(max-width:480px){.center{width:92%}.quiz-layout{height:95vh}.question{font-size:20px}}
-</style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Live Quiz Platform</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<!-- PIN -->
-<div class="screen active" id="pinScreen">
-  <div class="center">
-    <h2>Enter Game PIN</h2>
-    <input id="pin" placeholder="1234">
-    <div class="error" id="pinError"></div>
-    <button onclick="submitPin()">Join</button>
-  </div>
-</div>
-
-<!-- PROFILE -->
-<div class="screen" id="profileScreen">
-  <div class="center">
-    <h2>Your Profile</h2>
-    <input id="playerName" placeholder="Your name">
-    <div style="display:flex;justify-content:space-between;margin:10px 0">
-      <img src="https://i.pravatar.cc/100?img=1" class="avatar" onclick="selectAvatar(this)">
-      <img src="https://i.pravatar.cc/100?img=2" class="avatar" onclick="selectAvatar(this)">
-      <img src="https://i.pravatar.cc/100?img=3" class="avatar" onclick="selectAvatar(this)">
-      <img src="https://i.pravatar.cc/100?img=4" class="avatar" onclick="selectAvatar(this)">
+    <!-- PIN -->
+    <div class="screen active" id="pinScreen">
+        <div class="center">
+            <h2>Enter Game PIN</h2>
+            <input id="pin" placeholder="1234">
+            <div class="error" id="pinError"></div>
+            <button onclick="submitPin()">Join</button>
+        </div>
     </div>
-    <div class="error" id="profileError"></div>
-    <button onclick="submitProfile()">Continue</button>
-  </div>
-</div>
 
-<!-- PRE-QUIZ TIMER -->
-<div class="screen" id="preTimerScreen">
-  <div class="center" style="text-align:center">
-    <div style="font-size:64px;font-weight:800" id="preTimer">5</div>
-    <p>Get Ready...</p>
-  </div>
-</div>
-
-<!-- QUIZ -->
-<div class="screen" id="quizScreen">
-  <div class="quiz-layout">
-    <div class="top">
-      <div class="qtimer">⏱ <span id="qTime">8</span>s</div>
-      <div class="question" id="question"></div>
-      <div class="options" id="options"></div>
+    <!-- PROFILE -->
+    <div class="screen" id="profileScreen">
+        <div class="center">
+            <h2>Your Profile</h2>
+            <input id="playerName" placeholder="Your name">
+            <div style="display:flex;justify-content:space-between;margin:10px 0">
+                <img src="https://i.pravatar.cc/100?img=1" class="avatar" onclick="selectAvatar(this)">
+                <img src="https://i.pravatar.cc/100?img=2" class="avatar" onclick="selectAvatar(this)">
+                <img src="https://i.pravatar.cc/100?img=3" class="avatar" onclick="selectAvatar(this)">
+                <img src="https://i.pravatar.cc/100?img=4" class="avatar" onclick="selectAvatar(this)">
+            </div>
+            <div class="error" id="profileError"></div>
+            <button onclick="submitProfile()">Continue</button>
+        </div>
     </div>
-    <div class="bottom">
-      <h4>Live Leaderboard</h4>
-      <div id="players"></div>
+
+    <!-- PRE-QUIZ TIMER -->
+    <div class="screen" id="preTimerScreen">
+        <div class="center" style="text-align:center">
+            <div style="font-size:64px;font-weight:800" id="preTimer">5</div>
+            <p>Get Ready...</p>
+        </div>
     </div>
-  </div>
-</div>
 
-<!-- CALCULATING -->
-<div class="screen result" id="calcScreen">
-  <div class="center" style="text-align:center">
-    <h2>Calculating Results...</h2>
-    <p>Please wait</p>
-  </div>
-</div>
+    <!-- QUIZ -->
+    <div class="screen" id="quizScreen">
+        <div class="quiz-layout">
+            <div class="top">
+                <div class="qtimer">⏱ <span id="qTime">8</span>s</div>
+                <div class="question" id="question"></div>
+                <div class="options" id="options"></div>
+            </div>
+            <div class="bottom">
+                <h4>Live Leaderboard</h4>
+                <div id="players"></div>
+            </div>
+        </div>
+    </div>
 
-<!-- RESULT -->
-<div class="screen result" id="resultScreen">
-  <div class="center">
-    <div class="trophy">🏆</div>
-    <h2>Congratulations!</h2>
-    <p id="winner"></p>
-    <div id="podium"></div>
-    <button onclick="location.reload()">Play Again</button>
-  </div>
-</div>
+    <!-- CALCULATING -->
+    <div class="screen result" id="calcScreen">
+        <div class="center" style="text-align:center">
+            <h2>Calculating Results...</h2>
+            <p>Please wait</p>
+        </div>
+    </div>
 
-<!-- SOUNDS -->
-<audio id="correctSound" src="https://assets.mixkit.co/sfx/preview/mixkit-achievement-bell-600.mp3"></audio>
-<audio id="winSound" src="https://assets.mixkit.co/sfx/preview/mixkit-game-level-completed-2059.mp3"></audio>
-<audio id="kbcSound" src="https://assets.mixkit.co/sfx/preview/mixkit-ticking-clock-1056.mp3" loop></audio>
-<audio id="userVoice" src="kbc_4.mp3"></audio>
+    <!-- RESULT -->
+    <div class="screen result" id="resultScreen">
+        <div class="center">
+            <div class="trophy">🏆</div>
+            <h2>Congratulations!</h2>
+            <p id="winner"></p>
+            <div id="podium"></div>
+            <button onclick="location.reload()">Play Again</button>
+        </div>
+    </div>
 
-<script>
-// 🔊 AUDIO UNLOCK
-let audioUnlocked=false;
-document.addEventListener('click',()=>{
-  if(audioUnlocked) return;
-  audioUnlocked=true;
-  ['correctSound','winSound','kbcSound','userVoice'].forEach(id=>{
-    const a=document.getElementById(id);
-    if(a){a.muted=true;a.play().then(()=>{a.pause();a.currentTime=0;a.muted=false;}).catch(()=>{});} 
-  });
-},{once:true});
+    <!-- SOUNDS -->
+    <audio id="correctSound" src="https://assets.mixkit.co/sfx/preview/mixkit-achievement-bell-600.mp3"></audio>
+    <audio id="winSound" src="https://assets.mixkit.co/sfx/preview/mixkit-game-level-completed-2059.mp3"></audio>
+    <audio id="kbcSound" src="https://assets.mixkit.co/sfx/preview/mixkit-ticking-clock-1056.mp3" loop></audio>
+    <audio id="userVoice" src="kbc_4.mp3"></audio>
 
-const questions=[
- {q:'What does HTML stand for?',o:['Hyper Text Markup Language','High Text Machine','Hyperlinks Text','None'],a:0},
- {q:'Which language is used for styling web pages?',o:['HTML','CSS','Java','Python'],a:1},
- {q:'Which language is used for web logic?',o:['HTML','CSS','JavaScript','SQL'],a:2},
- {q:'Which tag is used for line break?',o:['<br>','<hr>','<p>','<div>'],a:0},
- {q:'CSS file extension?',o:['.html','.js','.css','.java'],a:2},
- {q:'JS variable keyword?',o:['var','int','float','string'],a:0},
- {q:'Largest heading tag?',o:['h1','h3','h6','head'],a:0},
- {q:'Base web language?',o:['Python','C','HTML','Java'],a:2}
-];
-
-let qi=0,qInt,avatar='',players=[];
-
-function submitPin(){
-  if(!/^\d{4}$/.test(pin.value)){
-    pinError.innerText='Enter 4 digit PIN';return;
-  }
-  show('profileScreen');
-}
-
-function selectAvatar(el){
-  document.querySelectorAll('.avatar').forEach(a=>a.style.border='none');
-  el.style.border='3px solid #2575fc';avatar=el.src;
-}
-
-function submitProfile(){
-  if(playerName.value===''){profileError.innerText='Enter name';return;}
-  if(!avatar){profileError.innerText='Select avatar';return;}
-  initPlayers();show('preTimerScreen');startPreTimer();
-}
-
-function initPlayers(){
-  players=[{name:playerName.value,score:0,avatar}];
-  for(let i=1;i<=5;i++) players.push({name:'Player'+i,score:Math.floor(Math.random()*10),avatar:`https://i.pravatar.cc/100?img=${i+5}`});
-  renderPlayers();
-}
-
-function startPreTimer(){
-  let t=5;const el=preTimer;const voice=userVoice;
-  const colors=['#ff4757','#ffa502','#2ed573','#1e90ff','#2575fc'];
-  el.innerText=t;
-  const int=setInterval(()=>{
-    el.innerText=t;document.body.style.background=colors[t-1]||colors[0];
-    if(t===5){voice.currentTime=0;voice.play().catch(()=>{});}t--;
-    if(t<0){clearInterval(int);show('quizScreen');loadQ();}
-  },1000);
-}
-
-function loadQ(){
-  if(qi>=questions.length){finishQuiz();return;}
-  userVoice.currentTime=0;userVoice.play().catch(()=>{});
-  question.innerText=questions[qi].q;options.innerHTML='';
-  questions[qi].o.forEach((op,i)=>{
-    const d=document.createElement('div');d.className='option';
-    d.innerHTML=`<span class="circle"></span><span>${op}</span>`;
-    d.onclick=()=>selectOpt(i===questions[qi].a,d);options.appendChild(d);
-  });startTimer();
-}
-
-function startTimer(){
-  let t=8;qTime.innerText=t;clearInterval(qInt);
-  kbcSound.currentTime=0;kbcSound.play().catch(()=>{});
-  qInt=setInterval(()=>{
-    t--;qTime.innerText=t;
-    if(t<0){clearInterval(qInt);kbcSound.pause();nextQ();}
-  },1000);
-}
-
-function selectOpt(correct,el){
-  clearInterval(qInt);kbcSound.pause();
-  if(correct){el.classList.add('correct');players[0].score+=10;correctSound.play().catch(()=>{});confetti();}
-  else el.classList.add('wrong');
-  renderPlayers();setTimeout(nextQ,1200);
-}
-
-function nextQ(){qi++;loadQ();}
-
-function renderPlayers(){
-  players.sort((a,b)=>b.score-a.score);playersDiv.innerHTML='';
-  players.forEach((p,i)=>{playersDiv.innerHTML+=`<div class='player ${i===0?'top1':''}'><div class='player-left'><img src='${p.avatar}'><span>#${i+1} ${p.name}</span></div><span>${p.score} pts</span></div>`});
-}
-
-function finishQuiz(){
-  show('calcScreen');
-  setTimeout(()=>{
-    players.sort((a,b)=>b.score-a.score);
-    podium.innerHTML=`<p>🥇 ${players[0]?.name} (${players[0]?.score})</p><p>🥈 ${players[1]?.name} (${players[1]?.score})</p><p>🥉 ${players[2]?.name} (${players[2]?.score})</p>`;
-    winner.innerText='Amazing performance by all participants!';
-    winSound.play().catch(()=>{});confetti();show('resultScreen');
-  },3000);
-}
-
-function confetti(){
-  for(let i=0;i<90;i++){const c=document.createElement('div');c.className='confetti';c.style.left=Math.random()*100+'vw';c.style.background=`hsl(${Math.random()*360},100%,50%)`;document.body.appendChild(c);setTimeout(()=>c.remove(),3000)}
-}
-
-function show(id){document.querySelectorAll('.screen').forEach(s=>s.classList.remove('active'));document.getElementById(id).classList.add('active');}
-
-const playersDiv=document.getElementById('players');
-</script>
+    <script src="script.js"></script>
 </body>
 </html>
-
